# pdf-to-json

./: .gitignore  CLAUDE.md  README.md  pdf_reader.py  project-journey.html  pyproject.toml  requirements.txt
langchain-pdf/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  batch_extract.py  docker-compose.yml  requirements.txt
langchain-pdf/app/: config.py  extractor.py  form11.py  gemini.py  groq.py  main.py  mpr_local.py  mpr_reconcile.py  nvidia.py  payment_advice.py  schemas.py  workorder.py  workorder_local.py
langchain-pdf/tests/: test_schemas.py
surya_extractor/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  extractor.py  mpr_grouper.py  pyproject.toml  server.py
