[project]
name = "pdf-reader"
version = "0.1.0"
description = "Robust PDF reader with text extraction + OCR fallback for scanned PDFs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yashdeep Tomer", email = "yashdeep.tomer@gmail.com" }]
dependencies = [
    "pdfplumber>=0.11",
    "pdf2image>=1.17",
    "pytesseract>=0.3.13",
]

[project.scripts]
pdf-reader = "pdf_reader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pdf_reader.py"]
