[project]
name = "surya-extractor"
version = "0.1.0"
description = "Surya-powered PDF table extraction HTTP server for accuracy evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yashdeep Tomer", email = "yashdeep.tomer@gmail.com" }]
dependencies = [
    # Surya 2 (>=0.20): single 650M VLM served via llama.cpp (CPU) or vLLM (GPU).
    # The Docker image must provide a `llama-server` binary on PATH (copied from
    # the official ghcr.io/ggml-org/llama.cpp:server image). extractor.py uses
    # the SuryaInferenceManager API; mpr_grouper.py parses the blocks/html schema.
    "surya-ocr>=0.20",
    # Surya imports `find_pruneable_heads_and_indices` from transformers,
    # which was removed in transformers 5.0 (2025). Pin to <5 to keep working.
    "transformers>=4.40,<5.0",
    "requests>=2.31",          # Surya imports it but forgets to declare it
    "pdf2image>=1.17",
    "pillow>=10.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
surya-server = "server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "extractor.py", "mpr_grouper.py"]
